2007-07-29  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #335881

	* gui/e-calendar-table.c: Paste raw text data from clipboard while
	editing column.

2007-07-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/cal-search-bar.c: (cal_search_bar_class_init): Remove needless
	EFilterBarClass.

2007-07-18  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #326388

	* gui/calendar-component.c: (ensure_sources):
	Set 'delete=no' property for birthdays_source if its not set.

2007-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #444433 from Lucky

	* gui/cal-search-bar.c: (make_suboptions):
	* gui/caltypes.xml:
	* gui/memotypes.xml:
	* gui/tasktypes.xml:

2007-07-27  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #457394

	* gui/e-calendar-table.c: (hide_completed_rows):
	Properly free component with e_cal_model_free_component_data.
	* gui/e-calendar-table.c: (show_completed_rows):
	Reference 'client' on new component.

2007-07-27  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* dialogs/cal-prefs-dialog.c: (calendar_prefs_dialog_finalize):
	* dialogs/task-page.c: (task_page_create_source_option_menu):
	* dialogs/e-send-options-utils.c:
	(e_sendoptions_utils_set_default_data):
	* dialogs/url-editor-dialog.c: (init_widgets):
	* dialogs/event-page.c: (event_page_create_source_option_menu):
	* dialogs/memo-page.c: (memo_page_create_source_option_menu):
	* e-week-view-event-item.c: (e_week_view_event_item_draw):
	* e-day-view-top-item.c: (e_day_view_top_item_draw_long_event):
	* e-pub-utils.c: (e_pub_publish): Plugged memory leaks.

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/main.c: Do not need to call g_source_remove(). If the callback
	function returns FALSE, the event source is automatically removed.

2007-07-26  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gui/alarm-notify/config-data.c, gui/tasks-component.c,
	gui/calendar-component.c, gui/memos-component.c: Plugged memory leaks.

2007-07-26  Milan Crha  <mcrha@redhat.com>
